# mkdocs-diff-file-import

./: README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
mkdocs_diff_file_import/: diff_file_import.py
